Crash on render on specific file with volumentrics and 'use hair' clicked on render layer #40797

Closed
opened 2014-06-25 02:29:37 +02:00 by bassam kurdali · 7 comments
Member

System Information
GNU/Linux 64 bit (fedora 20) Intel i7 6 core/ nvidia gpu

Blender Version
Broken: 2.71 Hash f37ec65
Worked: (optional)

Short description of error
On the specific file mentioned, clicking on "use hair" and rendering the 'fog' renderlayer which contains a volumetric object, the file crashes when switching viewport to rendered. The file also crashes on render on any renderlayer that does not exclude the aforementioned volumetrics.
Exact steps for others to reproduce the error
1- Please download the following file: http://urchn.org/misc/a2s03lightpacked.blend
2- open the file. Note you do not have to enable python scripts to see the bug happen.
3- note that the renderlayer selected is 'fog' and that 'use hair' is unchecked. Switch viewport to rendered. should render after a bit, with no downside.
4- switch viewport back to shaded or wireframe.
5- click 'use hair' on the fog renderlayer
6- switch viewport back to rendered....
7- wait a bit...
should crash at this point.

I've tried to replicate this in a simple file, but could not. But at least, the steps are repeatable and you don't need python for it....

**System Information** GNU/Linux 64 bit (fedora 20) Intel i7 6 core/ nvidia gpu **Blender Version** Broken: 2.71 Hash f37ec65 Worked: (optional) **Short description of error** On the specific file mentioned, clicking on "use hair" and rendering the 'fog' renderlayer which contains a volumetric object, the file crashes when switching viewport to rendered. The file also crashes on render on any renderlayer that does not exclude the aforementioned volumetrics. **Exact steps for others to reproduce the error** 1- Please download the following file: http://urchn.org/misc/a2s03lightpacked.blend 2- open the file. Note you do **not** have to enable python scripts to see the bug happen. 3- note that the renderlayer selected is 'fog' and that 'use hair' is unchecked. Switch viewport to rendered. should render after a bit, with no downside. 4- switch viewport back to shaded or wireframe. 5- click 'use hair' on the fog renderlayer 6- switch viewport back to rendered.... 7- wait a bit... should crash at this point. I've tried to replicate this in a simple file, but could not. But at least, the steps are repeatable and you don't need python for it....
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @BassamKurdali

Added subscriber: @BassamKurdali

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Confirmed with 1731d47 on Mac OS.

Confirmed with 1731d47 on Mac OS.
Sergey Sharybin self-assigned this 2014-06-27 20:25:01 +02:00

This issue was referenced by a8233d7c44

This issue was referenced by a8233d7c4424d2a41d8abfd4c9d6ca4ea56a56f2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a8233d7c44.

Closed by commit a8233d7c44.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40797
No description provided.