Fix T40797: Crash on render on specific file with volumentrics and 'use hair' clicked on render layer